--- a/boggedash/login-new.html
+++ b/boggedash/login-new.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-    {% include 'flashmsg.html' %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Login - Bogged.me</title>
     <meta name="description" content="Paper trade cryptocurrency for fun and (make believe) profit!">
-    <link rel="stylesheet" href="../static/dashassets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
-    <link rel="stylesheet" href="../static/dashassets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="../static/dashassets/css/untitled.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body class="bg-gradient-primary">
@@ -22,24 +21,24 @@
                     <div class="card-body p-0">
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-flex">
-                                <div class="flex-grow-1 bg-login-image" style="background-image: url(../static/dashassets/img/boysminem.jpeg);"></div>
+                                <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;assets/img/boysminem.jpeg&quot;);"></div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">{{random_phrase}}</h4>
                                     </div>
-                                    <form class="user" action="#" method="post">
-                                        <div class="form-group"><input class="form-control form-control-user" type="text" aria-describedby="userHelp" placeholder="Enter username" name="user"></div>
-                                        <div class="form-group"><input class="form-control form-control-user" type="password" placeholder="Enter password" name="password"></div>
+                                    <form class="user">
+                                        <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter username" name="email"></div>
+                                        <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Enter password" name="password"></div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1">Remember Me</label></div>
                                             </div>
-                                        </div><button class="btn btn-primary btn-block text-white btn-user" type="submit" value="submit">Login</button>
+                                        </div><button class="btn btn-primary btn-block text-white btn-user" type="submit">Login</button>
                                         <hr>
                                     </form>
-                                    <!-- <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div> -->
+                                    <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
                                     <div class="text-center"><a class="small" href="register.html">Create an Account</a></div>
                                 </div>
                             </div>
@@ -49,13 +48,12 @@
             </div>
         </div>
     </div>
-
-   <script src="../static/dashassets/js/jquery.min.js"></script>
-    <script src="../static/dashassets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../static/dashassets/js/chart.min.js"></script>
-    <script src="../static/dashassets/js/bs-init.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/chart.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="../static/dashassets/js/theme.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
